<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/albumShuffleBtn"
        android:title="@string/shuffle"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/add_to_playlist"
        android:icon="@drawable/add_to_playlist"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/playNext"
        android:title="@string/play_next"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share"
        app:showAsAction="collapseActionView" />


</menu>