<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:layout_gravity="center"
    android:background="@drawable/details_bg"
    android:padding="12dp">


    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/artist"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/albumTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/album"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/durationTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pathTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sizeTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/path"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pathTitleTextView"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/path"
        android:textIsSelectable="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_capsule_panel_bg"
        app:backgroundTint="@color/play"
        android:layout_below="@id/pathTextView"
        android:layout_marginTop="14dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:text="@string/ok"
        android:textStyle="bold"
        android:textColor="@color/white"/>


</RelativeLayout>