<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mArtistContainer"
    android:background="@color/main_bg_color"
    tools:context=".activities.ArtistDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollIndicators="right"
        android:scrollbars="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/artistViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myTint2">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="44dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:onClick="backToHome"
                    android:padding="10dp"
                    android:translationZ="10dp"
                    android:src="@drawable/back_btn"
                    android:contentDescription="@string/back"
                    app:tint="@android:color/white" />

                <ImageView
                    android:id="@+id/artist_menu"
                    android:layout_width="44dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:translationZ="10dp"
                    android:src="@drawable/more_vert"
                    android:contentDescription="@string/more_options"
                    app:tint="@android:color/white" />

                <ImageView
                    android:id="@+id/artistPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:scaleType="center"
                    android:src="@drawable/artist_art"
                    android:contentDescription="@string/album" />

                <ImageView
                    android:id="@+id/artist_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/artist_gradient_bg"
                    android:layout_alignBottom="@id/artistPhoto"
                    android:contentDescription="@string/gradient_1_light" />

                <TextView
                    android:id="@+id/artistTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_rg"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginHorizontal="40dp"
                    android:layout_alignBottom="@id/artistPhoto"
                    android:text="@string/artist"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/no_of_songs_and_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_rg"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/no_of_song"
                    android:textColor="@color/black"
                    android:textFontWeight="500"
                    android:textSize="16sp"
                    tools:targetApi="p" />



                <TextView
                    android:id="@+id/songsTitleHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/no_of_songs_and_duration"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_rg"
                    android:singleLine="true"
                    android:text="@string/songs"
                    android:textColor="@color/black"
                    android:textFontWeight="700"
                    android:textSize="19sp"
                    tools:targetApi="p" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/songsTitleHeading" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/artistPlayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/play"
        app:fabSize="normal"
        android:visibility="visible"
        android:tooltipText="Play"
        app:icon="@drawable/play_bottom"
        android:src="@drawable/play_bottom"
        app:iconSize="70dp"
        app:tint="@color/title"
        android:backgroundTint="@color/fab_color"
        app:iconTint="@color/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginBottom="50dp"
        tools:targetApi="o" />


</RelativeLayout>